<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string
    name="app_name">LunchMapSample</string>
  <string
    name="api_key">0txM1mFjeY-GZJhSybjaJon2jzmYXZPf3CV82cg</string>
  <string
    name="tv_shop_name">店名：</string>
  <string
    name="tv_shop_rate">評価：</string>
  <string
    name="rb_num_starts">5</string>
  <string
    name="tv_price">平均予算：</string>
  <string
    name="tv_comment">コメント：</string>
  <string
    name="btn_ok">確定</string>
  <string
    name="btn_cancel">戻る</string>
  <string
    name="add_menu_text">マーカー追加</string>
  <string
    name="delete_menu_text">マーカー削除</string>
</resources>
