<?xml version="1.0" encoding="utf-8"?>
<!-- リニアレイアウト(縦並び) -->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <!-- テーブルレイアウト(2列目の幅を画面端まで伸ばす) -->
  <TableLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:stretchColumns="1">
    <!-- 店名 -->
    <TableRow>
      <TextView
        android:id="@+id/tv_shop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_shop_name" />
      <EditText
        android:id="@+id/et_shop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </TableRow>

    <!-- 平均予算 -->
    <TableRow>
      <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_price" />
      <EditText
        android:id="@+id/et_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numeric="integer" />
    </TableRow>

    <!-- コメント -->
    <TableRow>
      <TextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_comment" />
      <EditText
        android:id="@+id/et_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="3" />
    </TableRow>
  </TableLayout>
  
  <!-- 評価 -->
  <TextView
        android:id="@+id/tv_shop_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_shop_rate" />
  <RatingBar
        style="?android:attr/ratingBarStyleIndicator"
        android:id="@+id/rb_shop_rate"
        android:isIndicator="false"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="30dp"
        android:numStars="@string/rb_num_starts"
        android:rating="1"
        android:stepSize="1" />

  <!-- リニアレイアウト(横並び) -->
  <LinearLayout
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:stretchColumns="1">
    <!-- 戻るボタン -->
    <Button
      android:id="@+id/btn_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_cancel" />
    <!-- 確定ボタン -->
    <Button
      android:id="@+id/btn_ok"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_ok" />    
  </LinearLayout>
</LinearLayout>